{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 14,
  "lineage": "2b2e6ea9-eed2-b734-a212-90970210e9f0",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewalli-ext",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-05-02T07:16:58.347-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-aaba714f0a7e/global/firewalls/dev-firewall-ext",
            "log_config": [],
            "name": "dev-firewall-ext",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-aaba714f0a7e/global/networks/dev-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-aaba714f0a7e",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-aaba714f0a7e/global/firewalls/dev-firewall-ext",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewalli-int",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-05-02T07:17:23.323-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-aaba714f0a7e/global/firewalls/dev-firewall-int",
            "log_config": [],
            "name": "dev-firewall-int",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-aaba714f0a7e/global/networks/dev-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-aaba714f0a7e",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-aaba714f0a7e/global/firewalls/dev-firewall-int",
            "source_ranges": [
              "10.240.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.google_compute_subnetwork.subnet",
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-02T07:17:00.083-07:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/qwiklabs-gcp-03-aaba714f0a7e/regions/us-central1/subnetworks/dev-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "dev-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-aaba714f0a7e/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-03-aaba714f0a7e",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-aaba714f0a7e/regions/us-central1/subnetworks/dev-subnet"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-03-aaba714f0a7e/global/networks/dev-vpc",
            "mtu": 0,
            "name": "dev-vpc",
            "project": "qwiklabs-gcp-03-aaba714f0a7e",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-aaba714f0a7e/global/networks/dev-vpc"
          }
        }
      ]
    }
  ]
}